# falcon-swoop

./: LICENSE  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: falcon_swoop_example.sh
src/falcon_api/: __init__.py  error.py  model.py  operation.py  resource.py  route.py
src/falcon_api/openapi/: gen.py  spec.py
src/falcon_api_test/: basic.py  config.py  demo.py  openapi_gen.py  util.py
src/falcon_simpleapi/: __init__.py  model.py  resource.py
src/falcon_simpleapi/openapi/: spec.py
src/falcon_simpleapi_test/: demo.py
src/falcon_swoop/: __init__.py  app.py  binary.py  context.py  error.py  http_io.py  operation.py  operation_spec.py  output.py  param.py  resource.py  route.py  type_util.py
src/falcon_swoop/openapi/: __init__.py  app.py  gen.py  pydantic_util.py  resource.py  spec.py  swagger.py
src/falcon_swoop_example/: app.py  controller.py  service.py
src/falcon_swoop_example/controller/: admin.py  notes.py  stats.py
src/falcon_swoop_test/: async.py  basic.py  config.py  conftest.py  openapi_gen.py  test_basic.py  test_config.py  test_docs.py  test_openapi_gen.py  util.py
src/falcon_swoop_test/resource/: common.py  impl_async.py  impl_sync.py  test_resource.py  util.py
