[project]
name = "falcon-swoop"
description = "Build simple APIs on top of falcon with pydantic data models, automated openapi doc generation included"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "pydantic==2.*",
    "falcon==4.*",
    "typing-extensions>=4.1"
]

[project.optional-dependencies]
dev = [
    "hatchling==1.28.0",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/falcon_swoop/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/falcon_swoop"]

[tool.pytest]
minversion = "9.0"
testpaths = ["src/falcon_swoop_test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
mypy_path = "src"
packages = ["falcon_swoop", "falcon_swoop_test"]
strict = true
plugins = "pydantic.mypy"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "D"]  # adding "D" for pydocstyle

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"src/falcon_swoop_test/**/*.py" = ["D"]  # ignore tests
