[project]
name = "falcon-swoop"
description = "Build simple APIs on top of falcon with pydantic data models (FastAPI style), automated OpenAPI spec generation included"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.*",
    "falcon==4.*",
    "typing-extensions>=4.1"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
keywords = [
    "asgi",
    "wsgi",
    "web",
    "api",
    "api-spec",
    "openapi",
    "swagger-ui",
    "framework",
    "rest",
    "http",
    "cloud",
]

[project.urls]
Repository = "https://github.com/osanj/falcon-swoop"

[project.optional-dependencies]
dev = [
    "griffe==2.0.0",
    "hatchling==1.28.0",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/falcon_swoop/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/falcon_swoop"]

[tool.pytest]
minversion = "9.0"
testpaths = ["src/falcon_swoop_test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
mypy_path = "src"
packages = ["falcon_swoop", "falcon_swoop_test", "falcon_swoop_example"]
strict = true
plugins = "pydantic.mypy"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "D", "I"]
# E ~ pycodestyle (default)
# F ~ pyflakes (default)
# D ~ pydocstyle
# I ~ isort

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["D"]
"src/falcon_swoop_example/**/*.py" = ["D"]  # ignore example
"src/falcon_swoop_test/**/*.py" = ["D"]  # ignore tests
"src/**/*.py" = ["D100"]  # ignore module description
